--- a/src/styles/components/footer/_FooterBottom.scss
+++ b/src/styles/components/footer/_FooterBottom.scss
@@ -16,14 +16,19 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: center;
+        justify-content: space-between;
+        @media only screen and (min-width: $desktop-breakpoint-plus){
+            width: 33%;
+        }
+        @media only screen and (max-width: $desktop-breakpoint){
+            flex-grow: 1;
+        }
 
         .social-media-link-container{
             @extend .clickable;
             @extend .flex-center;
             border-radius: 50%;
             background: $off-white;
-            margin: 10px;
             width: 9vw;
             height: 9vw;
             max-width: 50px;
