--- a/src/styles/components/footer/_FooterTop.scss
+++ b/src/styles/components/footer/_FooterTop.scss
@@ -14,11 +14,11 @@
         display: flex;
         flex-direction: row;
         align-items: flex-start;
-        justify-content: space-around;
-        padding: 5%;
+        justify-content: space-evenly;
         width: 100%;
 
         .footer-link-section{
+            max-width: 20%;
             display: flex;
             flex-direction: column;
             align-items: flex-start;
