--- a/src/styles/components/header/_Header.scss
+++ b/src/styles/components/header/_Header.scss
@@ -31,7 +31,6 @@
             justify-content: space-evenly;
             *{
                 color:$off-white;
-                margin-left: 2rem;
             }
             a{
                 font-size: 3rem;
